fixed mmi UI overlapping issue

--- a/src/Components/PlacePickerMap/PlacePickerMap.css
+++ b/src/Components/PlacePickerMap/PlacePickerMap.css
@@ -3,4 +3,5 @@
   height: 100%;
   margin: 0;
   padding: 0;
+  z-index: 99;
 }
